--- a/OneDo/View/MainPage.xaml
+++ b/OneDo/View/MainPage.xaml
@@ -42,9 +42,41 @@
         </CommandBar>
 
         <!--  Modals  -->
-        <controls:ModalContainer Grid.RowSpan="3"
+        <controls:ModalContainer x:Name="ModalContainer"
+                                 Grid.RowSpan="3"
+                                 CloseCommand="{Binding CloseCommand}"
                                  DataContext="{Binding ModalService, Source={StaticResource Locator}}"
-                                 Modal="{Binding Current}" />
+                                 Modal="{Binding Current}">
+            <controls:ModalContainer.TemplateSelector>
+                <v:ModalTemplateSelector>
+                    <v:ModalTemplateSelector.FolderEditorTemplate>
+                        <DataTemplate x:DataType="vmModals:FolderEditorViewModel">
+                            <Border HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"
+                                    BorderBrush="{ThemeResource SystemControlBackgroundBaseLowBrush}"
+                                    BorderThickness="1">
+                                <vModals:FolderEditor />
+                            </Border>
+                        </DataTemplate>
+                    </v:ModalTemplateSelector.FolderEditorTemplate>
+                    <v:ModalTemplateSelector.NoteEditorTemplate>
+                        <DataTemplate x:DataType="vmModals:NoteEditorViewModel">
+                            <vModals:NoteEditor />
+                        </DataTemplate>
+                    </v:ModalTemplateSelector.NoteEditorTemplate>
+                    <v:ModalTemplateSelector.SettingsTemplate>
+                        <DataTemplate x:DataType="vmModals:SettingsViewModel">
+                            <vModals:SettingsView />
+                        </DataTemplate>
+                    </v:ModalTemplateSelector.SettingsTemplate>
+                    <v:ModalTemplateSelector.DebugTemplate>
+                        <DataTemplate x:DataType="vmModals:DebugViewModel">
+                            <vModals:DebugView />
+                        </DataTemplate>
+                    </v:ModalTemplateSelector.DebugTemplate>
+                </v:ModalTemplateSelector>
+            </controls:ModalContainer.TemplateSelector>
+        </controls:ModalContainer>
 
         <!--  Progress  -->
         <Grid Grid.RowSpan="3">
