Refactoring - zjednodušení namespaců ve View a ViewModelu

--- a/OneDo/View/FolderListControl.xaml
+++ b/OneDo/View/FolderListControl.xaml
@@ -1,4 +1,4 @@
-﻿<v:ExtendedUserControl x:Class="OneDo.View.Controls.FolderListControl"
+﻿<v:ExtendedUserControl x:Class="OneDo.View.FolderListControl"
                        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -9,8 +9,7 @@
                        xmlns:i="using:Microsoft.Xaml.Interactivity"
                        xmlns:ic="using:Microsoft.Xaml.Interactions.Core"
                        xmlns:v="using:OneDo.View"
-                       xmlns:vItems="using:OneDo.View.Items"
-                       xmlns:vmItems="using:OneDo.ViewModel.Items"
+                       xmlns:vm="using:OneDo.ViewModel"
                        mc:Ignorable="d">
 
     <UserControl.Resources>
@@ -330,7 +329,7 @@
             </Setter>
         </Style>
 
-        <DataTemplate x:Key="FolderItemTemplate" x:DataType="vmItems:FolderItemObject">
+        <DataTemplate x:Key="FolderItemTemplate" x:DataType="vm:FolderItemObject">
             <Border Background="Transparent"
                     BorderThickness="0">
                 <FlyoutBase.AttachedFlyout>
