--- a/OneDo/View/DatePicker.xaml
+++ b/OneDo/View/DatePicker.xaml
@@ -1,9 +1,8 @@
-﻿<v:ExtendedUserControl x:Class="OneDo.View.Controls.DatePicker"
+﻿<v:ExtendedUserControl x:Class="OneDo.View.DatePicker"
                        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                       xmlns:controls="using:OneDo.View.Controls"
                        xmlns:v="using:OneDo.View"
                        mc:Ignorable="d">
 
@@ -101,9 +100,7 @@
 
     </v:ExtendedUserControl.Resources>
 
-    <Grid Background="{ThemeResource SystemControlBackgroundChromeMediumLowBrush}"
-          BorderBrush="{ThemeResource SystemControlForegroundChromeHighBrush}"
-          BorderThickness="0">
+    <Grid Background="{ThemeResource SystemControlBackgroundChromeMediumLowBrush}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
             <ColumnDefinition />
