--- a/OneDo/View/DebugView.xaml
+++ b/OneDo/View/DebugView.xaml
@@ -1,4 +1,4 @@
-﻿<v:ModalBase x:Class="OneDo.View.Modals.DebugView"
+﻿<v:ModalBase x:Class="OneDo.View.DebugView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
