--- a/OneDo/View/FolderEditor.xaml
+++ b/OneDo/View/FolderEditor.xaml
@@ -1,13 +1,11 @@
-﻿<v:ModalBase x:Class="OneDo.View.Modals.FolderEditor"
+﻿<v:ModalBase x:Class="OneDo.View.FolderEditor"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:behaviors="using:OneDo.View.Behaviors"
-             xmlns:i="using:Microsoft.Xaml.Interactivity"
-             xmlns:ic="using:Microsoft.Xaml.Interactions.Core"
              xmlns:v="using:OneDo.View"
-             xmlns:vmItems="using:OneDo.ViewModel.Items"
+             xmlns:vm="using:OneDo.ViewModel"
              d:DesignWidth="264"
              mc:Ignorable="d">
 
@@ -54,7 +52,7 @@
             </Setter>
         </Style>
 
-        <DataTemplate x:Key="ColorItemTemplate" x:DataType="vmItems:ColorItemObject">
+        <DataTemplate x:Key="ColorItemTemplate" x:DataType="vm:ColorItemObject">
             <Border Background="{x:Bind Color, Converter={StaticResource ColorToBrushConverter}}" />
         </DataTemplate>
 
