--- a/OneDo/View/NoteListControl.xaml
+++ b/OneDo/View/NoteListControl.xaml
@@ -1,4 +1,4 @@
-﻿<v:ExtendedUserControl x:Class="OneDo.View.Controls.NoteListControl"
+﻿<v:ExtendedUserControl x:Class="OneDo.View.NoteListControl"
                        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -9,8 +9,7 @@
                        xmlns:i="using:Microsoft.Xaml.Interactivity"
                        xmlns:ic="using:Microsoft.Xaml.Interactions.Core"
                        xmlns:v="using:OneDo.View"
-                       xmlns:vItems="using:OneDo.View.Items"
-                       xmlns:vmItems="using:OneDo.ViewModel.Items"
+                       xmlns:vm="using:OneDo.ViewModel"
                        mc:Ignorable="d">
 
     <UserControl.Resources>
@@ -98,7 +97,7 @@
             </Setter>
         </Style>
 
-        <DataTemplate x:Key="NoteItemTemplate" x:DataType="vmItems:NoteItemObject">
+        <DataTemplate x:Key="NoteItemTemplate" x:DataType="vm:NoteItemObject">
             <controls:SlidableListItem MinHeight="60"
                                        MaxHeight="100"
                                        Background="{x:Bind IsFlagged, Mode=OneWay, Converter={StaticResource NoteBackgroundConverter}}"
