--- a/OneDo/App.xaml
+++ b/OneDo/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:converters="using:OneDo.View.Converters"
              xmlns:vm="using:OneDo.ViewModel"
-             RequestedTheme="Dark">
+             RequestedTheme="Light">
 
     <Application.Resources>
         <ResourceDictionary>
